@@ -29,12 +29,22 @@
                             usedFacets view/getUsedFacets;"
                 >
 
-      <div id="content-core">
+      <div id="content-core"
+           tal:define="menu view/getMenu;
+                       show_language_menu python:len([lang for lang in menu['languageReview'] if lang['count'] > 0]) > 1;
+                       "
+          >
         <div id="browsing-menu-wrapper"
-            metal:define-macro="browsing-menu">
+            tal:define="
+                menu menu|view/getMenu;
+                show_language_menu python:len([lang for lang in menu['languageReview'] if lang['count'] > 0]) > 1;"
+             tal:condition="show_language_menu"
+             metal:define-macro="browsing-menu">
             <div id="browsing-menu"
-                 tal:define="menu view/getMenu;
-                             submenus view/getSubmenus;">
+                 tal:define="
+                    submenus view/getSubmenus;
+                 "
+                 >
               <tal:submenus repeat="submenu submenus">
                 <div class="submenu"
                      tal:attributes="id python:'submenu_' + submenu['id'];">
@@ -47,7 +57,7 @@
 
                   <div class="visualClear"><!-- --></div>
                   <tal:block tal:repeat="item python:menu[submenu['id']]">
-                    <div class="submenu-lvl2" tal:condition="python:(item['count']>=0 and item['query']) or item.has_key('clearquery') or view.showSubmenu(item['submenu'])">
+                    <div class="submenu-lvl2" tal:condition="python:(item['count']>0 and item['query']) or item.has_key('clearquery') or view.showSubmenu(item['submenu'])">
                       <div class="submenu_title empty fw-caret-right"
                            tal:attributes="id python:'sub-' + item['name'].replace(':','-').replace('.','_');
                                            class python:'fw-caret-right submenu_title' + (not item['submenu'] and ' empty' or '') + (view.expandSubmenu(item['submenu']) and ' open' or '');">
@@ -77,7 +87,7 @@
                           <li class="submenu_item"
                               tal:define="selected python:subitem.get('clearquery') and 'selected' or 'unselected'"
                               tal:attributes="class string:submenu_item ${selected}"
-                              tal:condition="python:subitem['count']>=0 or subitem.has_key('clearquery') or view.expandSubmenu(subitem['submenu'])">
+                              tal:condition="python:subitem['count']>0 or subitem.has_key('clearquery') or view.expandSubmenu(subitem['submenu'])">
 
                             <a href="#" tal:content="subitem/voc"
                                tal:condition="subitem/query"
@@ -128,7 +138,7 @@
                          batch python:Batch(results, b_size, int(b_start), orphan=0);">
 
 
-          <dl class="searchResults">
+                         <dl class="searchResults" tal:attributes="class python:'searchResults {}'.format('' if show_language_menu else 'nomenu')">
 
             <tal:results repeat="result batch">
               <tal:has_results condition="result">
